# discord-bot

./: Cargo.toml
src/: commands.rs  config.rs  events.rs  helpers.rs  main.rs
